Working Protocol Buffers Integration with updated Testng configuration